frontend/src/styles.css
/* You can add global styles to this file, and also import other style files */
/* style pour la page d'accueil */

/* 1 est la teinte la plus foncée, 3 la plus claire*/
:root {
    --red1: #b83100ff;
    --red2: #E03C00;
    --red3: #FF4B0A;

    --white1: #D7D8EA;
    --white2: #F0F1FD;
    --white3: #f9f9ffff;

    --silver1: #aba3a3ff;
    --silver2: #c5bfbfff;
    --silver3: #d8d4d4ff;

    --blue1: #1c364cff;
    --blue2: #31485cff;
    --blue3: #44596bff;
}


html,
body {
    height: 100%;
    margin: 0;
    font-family: Arial, sans-serif;
}

main {
    min-height: 100vh;
    background-color: var(--white3);
    height: 100%;
    overflow: hidden;
    transition-duration: 0.2s;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
}

body.dark main {
    background-color: var(--blue1);
}

main .card {
    border: 4px solid var(--white1);
    background-color: var(--white2);
}

main .clickable-card:hover {
    background-color: var(--white1);
}


main .card li{
    background-color: var(--white2);
}


body.dark main .card li,
body.dark main .card {
    background-color: var(--white3);
}

p,
body.dark main .card p,
body.dark main .routine p {
    color: var(--blue1);
}

body.dark p {
    color: var(--white3);
}

h1,
body.dark main .card h1 {
    color: var(--red1);
    margin-bottom: 20px;
}

h2,
body.dark main .card h2 {
    color: var(--blue1);
    font-weight: normal;
}

main .card h1 {
    color: var(--blue1);
}

body.dark h1,
body.dark h2,
body.dark label
{
    color: var(--white3);
}

.button-group {
    display: flex;
    /* met les boutons côte à côte */
    gap: 10px;
    /* espace entre les boutons */
    justify-content: center;
    /* centrer horizontalement */
    margin-top: 20px;
}

button,
input {
    padding: 10px 20px;
    border-radius: 12px !important;
    transition-duration: 0.3s;
}

.btn-principal,
body.dark .card .btn-principal {
    background-color: var(--blue1);
    border-color: var(--blue1);
    color: var(--white3);
}

body.dark .btn-principal {
    background-color: var(--white3);
    border-color: var(--white3);
    color: var(--blue1);
}

.btn-principal:hover,
body.dark .card .btn-principal:hover {
    background-color: var(--blue3);
    border-color: var(--blue3);
    color: var(--white3);
}

body.dark .btn-principal:hover {
    background-color: var(--silver3);
    border-color: var(--silver3);
    color: var(--blue1);
}


.btn-red {
    background-color: var(--red1);
    border-color: var(--red1);
    color: var(--white3);
}

.btn-red:hover {
    background-color: var(--red2) !important;
    border-color: var(--red2) !important;
    color: #fff !important;
}

form {
    display: block;
    margin: 0 auto;

}

.form-group {
    text-align: center;
    min-width: 100px;
}

form input {
    display: block;
    margin: 0 auto;
    width: 50%;
    text-align: center;
}

form input[type=submit] {
    width: 20%;
    text-align: center;
    min-width: 100px;
    box-sizing: border-box;
}

form button {
    width: 20%;
    min-width: 100px;
    margin: 0 auto;
}

form .btn-principal,
form .btn-red {
    padding: 5px 10px;
}

.imgLogo {
    height: 150px;
}

canvas {
    width: 800px;
    height: 500px;
    align-items: right;
}

body.dark canvas {
    width: 800px;
    height: 500px;
    align-items: right;
}

.hbox {
    display: flex;
    flex-direction: row;
    gap: 10px;
}

.layout {
    display: flex;
    gap: 0px;
    padding: 0px;
}

.page {
    flex: 1;
    overflow: auto;
}

app-ajouter-exo,
app-graph-poid,
app-choisir-routine {
    flex: 7;
    /* 6 parts */
}

app-afficher-exo,
app-menu-poid,
app-afficher-routine,
app-configurer-exo {
    flex: 3;
    /* 4 parts → ratio 6:4 = 60:40 */
}

.routine {
    display: flex;
    justify-content: center;
    /* centre horizontalement les jours */
    align-items: flex-end;
    /* centre la ligne dans la page */
    gap: 11px;
    /* espace entre les jours */
    margin-top: 40px;
}

.routine .card {
    border: 4px solid var(--white1);
    padding: 10px 15px;
    text-align: center;
    border-radius: 8px;
    background-color: var(--white2);
    height: 60vh;
    width: 180px;
}

.routineBtn {
    display: flex;
    padding: 10px 15px;
    margin-right: 10px;
    gap: 10px;
}

.card .text-gray {
    color: var(--blue3);
}

